--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": "https://github.com/fauxton/ember-tachyons-media-query-data-attrs",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
